--- a/package.yaml
+++ b/package.yaml
@@ -35,7 +35,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - haskell-sdl-test
+    - gamejam
 
 tests:
   gamejam-test:
@@ -46,4 +46,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - haskell-sdl-test
+    - gamejam
