--- a/gamejam.cabal
+++ b/gamejam.cabal
@@ -32,6 +32,9 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , lens ==5.*
+    , mtl >=2.2 && <3
+    , random >=1.2 && <2
     , sdl2 ==2.5.*
   default-language: Haskell2010
 
@@ -45,6 +48,9 @@ executable gamejam-exe
   build-depends:
       base >=4.7 && <5
     , gamejam
+    , lens ==5.*
+    , mtl >=2.2 && <3
+    , random >=1.2 && <2
     , sdl2 ==2.5.*
   default-language: Haskell2010
 
@@ -59,5 +65,8 @@ test-suite gamejam-test
   build-depends:
       base >=4.7 && <5
     , gamejam
+    , lens ==5.*
+    , mtl >=2.2 && <3
+    , random >=1.2 && <2
     , sdl2 ==2.5.*
   default-language: Haskell2010
