--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,9 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - sdl2 >= 2.5 && < 2.6
+- random >= 1.2 && < 2
+- mtl >= 2.2 && < 3
+- lens >= 5 && < 6
 
 library:
   source-dirs: src
