--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,7 @@ dependencies:
 - random >= 1.2 && < 2
 - mtl >= 2.2 && < 3
 - lens >= 5 && < 6
+- vector >= 0.12 && < 1
 
 library:
   source-dirs: src
@@ -37,6 +38,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -O2
     dependencies:
     - gamejam
 
