--- a/package.yaml
+++ b/package.yaml
@@ -21,10 +21,13 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
-- sdl2 >= 2.5 && < 2.6
-- random >= 1.2 && < 2
-- mtl >= 2.2 && < 3
+- bmp >= 1.2 && < 1.3
 - lens >= 5 && < 6
+- mtl >= 2.2 && < 3
+- random >= 1.2 && < 2
+- sdl2 >= 2.5 && < 2.6
+- strict >= 0.2 && < 1
+- text >= 1.2 && < 2
 - vector >= 0.12 && < 1
 
 library:
